--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <table>
           <tr>
             <th style="text-align:center"><a href="/" style="text-decoration:none">Home</a></th>
-            <th style="text-align:center"><a href="/hypatia" style="text-decoration:none">Hypatia</a></th>
+            <th style="text-align:center"><a href="/hypatia" style="text-decoration:none">Hypatia Hints</a></th>
           </tr>
         </table>
 
