--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,46 +1,52 @@
-<!DOCTYPE html>
-<html lang="en-US">
+<!doctype html>
+<html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 {% seo %}
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
-
   <body>
-
-    <header>
-      <div class="container">
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        <br><hr style="border-color:#b3ef56" />
-        <table>
-          <tr>
-            <th style="text-align:center"><a href="/" style="text-decoration:none">Home</a></th>
-            <th style="text-align:center"><a href="/hypatia" style="text-decoration:none">Hypatia Hints</a></th>
-          </tr>
-        </table>
-
-        <!--<section id="downloads">
+      <!--<div id="header">
+        <nav>
+          <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
           {% if site.show_downloads %}
-            <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
-            <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
+            <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
+            <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
+            <li class="title">DOWNLOADS</li>
           {% endif %}
-        </section>-->
-      </div>
-    </header>
+        </nav>
+      </div><!-- end header -->
 
-    <div class="container">
-      <section id="main_content" style="text-align:center">
+    <div class="wrapper">
 
-      {{ content }}
+      <section>
+        <div id="title">
+          <h1>{{ site.title | default: site.github.repository_name }}</h1>
+          <hr>
+          <span class="credits left">Project maintained by <a href="/">Home</a></span>
+          <span class="credits right"><a href="/projects">Projects</a></span>
+        </div>
+
+        {{ content }}
 
       </section>
+
     </div>
 
-<!--    {% if site.google_analytics %}
-      <script type="text/javascript">
+    <!--{% if site.google_analytics %}
+      <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -48,7 +54,6 @@
         ga('create', '{{ site.google_analytics }}', 'auto');
         ga('send', 'pageview');
       </script>
-    {% endif %}
--->
+    {% endif %}-->
   </body>
 </html>
