--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
         <div id="title">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <hr>
-          <span class="credits left">Project maintained by <a href="/">Home</a></span>
+          <span class="credits left"><a href="/">Home</a></span>
           <span class="credits right"><a href="/projects">Projects</a></span>
         </div>
 
