--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,7 @@
       </div><!-- end header -->
 
       <div id="header">
-        <nav>
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        </nav>
+          <h1>Hypatia Hints</h1>
       </div>
 
     <div class="wrapper">
