--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,14 +30,13 @@
       </div><!-- end header -->
 
       <div id="header">
-          <h1>Hypatia Hints</h1>
+          <h1 style ="text-align: center;">Hypatia Hints</h1>
       </div>
 
     <div class="wrapper">
 
       <section>
         <div id="title">
-          <hr>
           <span class="credits left"><a href="/">Home</a></span>
           <span class="credits right"><a href="/projects">Projects</a></span>
         </div>
