--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,7 +67,7 @@ ul {
     list-style-position: inside;
 }
 
-li.square {
+li::before {
     content: "■";
     color: #0a0;
     display: inline-block;
