--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,7 +44,7 @@ a:active {
 }
 
 h1 {
-    color: #50C878;
+    color: #2E8B57;
 }
 
 h2 {
@@ -69,7 +69,7 @@ ul {
 
 li::before {
     content: "■";
-    color: #4CBB17;
+    color: #39FF14;
     display: inline-block;
     width: 2em;
     margin-left: -2em
