--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -74,3 +74,10 @@ li::before {
     width: 2em;
     margin-left: -2em
 }
+
+hr {
+    border-top: 1px dotted #00be00;
+    border-bottom: 0;
+    border-left: 0;
+    border-right: 0;
+}
