--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -90,7 +90,7 @@ mark {
 
 /*----------------------------------------------------------------
   - Coustom check boxes                                          -
-  ----------------------------------------------------------------*/
+  ----------------------------------------------------------------
 /* The container */
 .container {
     display: block;
@@ -119,12 +119,12 @@ mark {
     left: 0;
     height: 25px;
     width: 25px;
-    background-color: #00be00;
+    background-color: #006900;
 }
 
 /* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
-    background-color: #006900;
+    background-color: #00a100;
 }
 
 /* When the checkbox is checked, add a blue background */
