--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -119,15 +119,15 @@ mark {
     left: 0;
     height: 25px;
     width: 25px;
-    background-color: #006900;
+    background-color: #600;
 }
 
-/* On mouse-over, add a grey background color */
+/* On mouse-over, add a background color */
 .container:hover input ~ .checkmark {
     background-color: #00a100;
 }
 
-/* When the checkbox is checked, add a blue background */
+/* When the checkbox is checked, add a background */
 .container input:checked ~ .checkmark {
     background-color: #0f0;
 }
@@ -148,10 +148,10 @@ mark {
 .container .checkmark:after {
     left: 9px;
     top: 5px;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
+    width: 0px;
+    height: 0px;
+    border: 0;
+    border-width: 0 0px 0px 0;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
