--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -176,3 +176,72 @@ li.navbar a:hover {
 ::-webkit-scrollbar-corner {
     background: transparent;
 }
+
+/*----------------------------------------------------------------
+  - Coustom check boxes                                          -
+  ----------------------------------------------------------------
+/* The container */
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #690000;
+}
+
+/* On mouse-over, add a background color */
+.container:hover input ~ .checkmark {
+    background-color: #006900;
+}
+
+/* When the checkbox is checked, add a background */
+.container input:checked ~ .checkmark {
+    background-color: #0f0;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 0px;
+    height: 0px;
+    border: 0;
+    border-width: 0 0px 0px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
