--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,10 @@
 
       <div id="header">
           <h1 style ="text-align: center;">Hypatia Hints</h1>
-          <span class="credits left"><a href="/">Home</a></span>
-          <span class="credits right"><a href="/projects">Projects</a></span>
+          <div id="title">
+            <span class="credits left"><a href="/">Home</a></span>
+            <span class="credits right"><a href="/projects">Projects</a></span>
+          </div>
       </div>
 
     <div class="wrapper">
