--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,46 +30,55 @@ footer {
 
 /* unvisited link */
 a:link {
+    font-family: ComicSans;
     color: #0ac139;
     text-decoration: underline;
 }
 
 /* visited link */
 a:visited {
+    font-family: ComicSans;
     color: #0ac139;
     text-decoration: none;
 }
 
 /* mouse over link */
 a:hover {
+    font-family: ComicSans;
     color: #0ac139;
     text-decoration: underline;
 }
 
 /* selected link */
 a:active {
+    font-family: ComicSans;
     color: #0ac139;
     text-decoration: underline;
 }
 
 a {
+    font-family: ComicSans;
     color: #0ac139;
     text-decoration: underline;
 }
 
 h1 {
+    font-family: ComicSans;
     color: #006900;
 }
 
 h2 {
+    font-family: ComicSans;
     color: #006900;
 }
 
 h3 {
+    font-family: ComicSans;
     color: #00be00;
 }
 
 h4 {
+    font-family: ComicSans;
     color: #006900;
 }
 
@@ -78,6 +87,7 @@ h5 {
 }
 
 h6 {
+    font-family: ComicSans;
     color: #00ff00;
 }
 
