--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -131,6 +131,11 @@ button {
     border-radius: 10px;
 }
 
+div {
+    background-color: #000;
+    color: #00be00
+}
+
 div.container {
     max-width: 80%;
     margin: 0 auto;
