--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=RyQA5rLO48">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=RyQA5rLO48">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=RyQA5rLO48">
+    <link rel="manifest" href="/site.webmanifest?v=RyQA5rLO48">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=RyQA5rLO48" color="#006900">
+    <link rel="shortcut icon" href="/favicon.ico?v=RyQA5rLO48">
+    <meta name="msapplication-TileColor" content="#00a300">
+    <meta name="theme-color" content="#006900">
 
 {% seo %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
