--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -263,3 +263,51 @@ li.navbar a:hover {
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+
+/*----------------------------------------------------------------*/
+
+.collapsible {
+    background-color: #006900;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+
+.active, .collapsible:hover {
+    background-color: #009000;
+}
+
+.collapsible:after {
+    content: '\002B';
+    color: white;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2212";
+}
+
+.innertext {
+    padding: 0 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #000;
+    text-align: left;
+}
+
+.innertextcenter {
+    padding: 0 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #000;
+    text-align: center;
+}
