--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,8 @@
 
     </div>
 
+    <script src="/assets/js/collapsible.js"></script>
+
     <!--{% if site.google_analytics %}
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
