--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       <section>
         <div id="title">
           <span class="credits left"><a href="/">Home</a></span>
-          <span class="credits right"><a href="/projects#depreciated">Projects</a></span>
+          <span class="credits right"><a href="/projects#deprecated">Projects</a></span>
         </div>
 
         {{ content }}
