--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,14 +2,19 @@
 ---
 
 @font-face {
+    font-family: Lexend;
+    src: url("/assets/fonts/lexend_deca/LexendDeca-Regular.ttf");
+}
+
+@font-face {
     font-family: ComicSans;
-    src: url(/comic.ttf);
+    src: url("/assets/fonts/comic_sans/comic.ttf");
 }
 
 @import "{{ site.theme }}";
 
 body {
-    font-family: ComicSans;
+    font-family: Lexend;
     text-align:center;
 	background-image: none;
     background-color: #000000;
@@ -17,7 +22,7 @@ body {
 }
 
 footer {
-    font-family: ComicSans;
+    font-family: Lexend;
     position: fixed;
     left: 0;
     bottom: 0;
@@ -30,7 +35,7 @@ footer {
 
 /* unvisited link */
 a:link {
-    font-family: ComicSans;
+    font-family: Lexend;
     color: #0ac139;
     text-decoration: underline;
 }
@@ -44,7 +49,7 @@ a:visited {
 
 /* mouse over link */
 a:hover {
-    font-family: ComicSans;
+    font-family: Lexend;
     color: #0ac139;
     text-decoration: underline;
 }
@@ -57,37 +62,38 @@ a:active {
 }
 
 a {
-    font-family: ComicSans;
+    font-family: Lexend;
     color: #0ac139;
     text-decoration: underline;
 }
 
 h1 {
-    font-family: ComicSans;
+    font-family: Lexend;
     color: #006900;
 }
 
 h2 {
-    font-family: ComicSans;
+    font-family: Lexend;
     color: #006900;
 }
 
 h3 {
-    font-family: ComicSans;
+    font-family: Lexend;
     color: #00be00;
 }
 
 h4 {
-    font-family: ComicSans;
+    font-family: Lexend;
     color: #006900;
 }
 
 h5 {
+    font-family: Lexend;
     color: #006900;
 }
 
 h6 {
-    font-family: ComicSans;
+    font-family: Lexend;
     color: #00ff00;
 }
 
